--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Gravity
-email: hemangsk@gmail.com
-description: The Liberal Jekyll Theme
+title: Chiven Young
+email: chivenyoung@gmail.com
+description: Be a simple person.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: hemang_kumar
-github_username:  hemangsk
+url: "https://weibo.com/obeing" # the base hostname & protocol for your site
+twitter_username: 零策
+github_username:  chiven-young
 paginate: 5
 theme-dark: false #Set to true to change to dark website theme
 
