--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings 配置站点
-title: 'your awesome title'
+title: 'Chiven Young'
 description: 'your web description'
 keywords: 'your web keywords, another keywords'
 url: 'https://chiven-young.github.io' # your host
@@ -14,9 +14,9 @@ nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
 
 # 博主
 author: true
-name: 'your awesome name'
-NickName: 'your awesome nickname'
-webtitle: 'your awesome webtitle'
+name: 'Chiven'
+NickName: '零策'
+webtitle: 'Bridge'
 bio: 'your awesome bio'
 about: true
 aboutyou: 'your introduction'
