--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ url: 'https://chiven-young.github.io' # your host
 # nav 中文字符空格：&emsp;
 nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
   首页: '/'
-  灵: 'feel.html'
-  觉: 'awaken.html'
+  灵: '/feel.html'
+  觉: '/awaken.html'
   标签: '/tags.html'
 # 时间线: '/timeline.html'
   关于博主: '/about.html'
