--- a/_config.yml
+++ b/_config.yml
@@ -11,20 +11,20 @@ theme_version: 1.0.4
 lang: es_ES
 title: Bridge
 name: Chiven Young
-title_home: Lenin Peña
+title_home: Chiven Young
 logo: # Logo image URL
 description: Blogger Tecnológico y Diseñador Web, escribo artículos sobre Internet, Aplicaciones, Diseño y Desarrollo Web, trucos y tips sobre Tecnologías
 baseurl: '' # The subpath of your site, e.g. /blog
 url: 'https://www.leninalbertop.com.ve' # The base hostname & protocol for your site
 
-twitter:
+# twitter:
   username: leninalbertop
 
-facebook: leninblogger
+# facebook: leninblogger
 
-instagram: leninalbertop
+instagram: bridgegrowing
 
-github: leninalbertolp
+github: chiven-young
 
 markdown: kramdown
 highlighter: rouge
@@ -90,8 +90,8 @@ authors:
     bio: Blogger Tecnológico y Diseñador Web, me apasiona las tecnologías en general, amante del Open Source.
     gravatar: /images/template/leninalbertop-avatar-autor.webp  #https://s.gravatar.com/avatar/f83141edd9e6339e678648596a403fd5?s=150
     picture: /images/template/leninalbertop-avatar-autor.webp
-    email: leninalbertop@outlook.com
-    facebook: leninblogger
-    github: leninalbertolp
-    twitter: leninalbertop
-    pinterest: leninalbertop
+    email: chiven@yeah.net
+    # facebook: leninblogger
+    github: chiven-young
+    # twitter: leninalbertop
+    # pinterest: leninalbertop
